# dc-replication

./: .gitmodules  Dockerfile  README.md
src/: CMakeLists.txt  benchmark.h  client_comm.cc  client_comm.hpp  comm.cc  comm.hpp  config.h  crypto.cc  crypto.hpp  crypto_util.cc  crypto_util.hpp  dc_client.cc  dc_client.hpp  dc_server.cc  dc_server.hpp  main.cc  storage.cc  storage.hpp
src/proto/: capsule.proto  pairing.proto  request.proto
src/util/: logging.cc  logging.hpp  utils.hpp
src/ycsb/: proc_trace.py  tracea_keys_c.txt  tracea_keys_d.txt  tracea_load_a.txt  tracea_load_b.txt  tracea_load_c.txt  tracea_load_d.txt  tracea_run_a.txt  tracea_run_b.txt  tracea_run_c.txt  tracea_run_d.txt
